Database constraints and Bean validation tests